:sparkles: adjust self intro section and added css

--- a/index.html
+++ b/index.html
@@ -23,8 +23,11 @@
             </div>
         </div>
     </header>
-    <section>
-        👋 Olá Visitante
+    <section id="self-intro">
+        <h1>
+            👋 Olá Visitante!
+        </h1>
+        <p>Eu sou o <span class="p-text">Marcos</span>! Sou um <span class="p-text">Desenvolvedor Front End</span> aqui da Bahia, apaixonado por programação. Além de codar, amo <span class="p-text">Design web</span> e <span class="p-text">UX/UI</span>. Se precisar de ajuda em qualquer projeto, estou aqui para ajudar! Fora do trabalho, você pode me encontrar lendo um bom livro, explorando o mundo Geek ou brincando com minha gata. Ah, e se quiser bater um papo sobre nossos interesses em comum, é só <span class="p-text">chamar</span>!</p>
     </section>
     <script src="/src/scripts/script.js"></script>
 </body>
